<resources>
    <string name="app_name">老人助手</string>

    <!-- Login Activity-->
    <string name="action_bar_login">登录</string>

    <string name="tv_account">账号</string>
    <string name="et_account_hint">请输入用户名</string>

    <string name="tv_password">密码</string>
    <string name="et_password_hint">请输入密码</string>

    <string name="btn_login">登录</string>

    <string name="tv_register">注册账号</string>
    <string name="tv_split_bar" translatable="false">|</string>
    <string name="tv_forget_pwd">忘记密码 </string>

    <string name="toast_login_error">用户名或密码错误!</string>

    <!-- Register Activity-->
    <string name="action_bar_register">注册</string>

    <string name="tv_request_pwd">确认密码</string>
    <string name="et_confirm_password_hint">请确认密码</string>

    <string name="tv_user_sex">性别</string>
    <string name="switch_male_female">  男 / 女  </string>

    <string name="tv_user_type">注册类型</string>
    <string name="switch_old_young"> 老人 / 子女 </string>

    <string name="tv_user_birthday">出生年月</string>
    <string name="et_user_birthday_hint" >(格式为: yyyy年mm月dd日)</string>

    <string name="tv_user_phone" >联系电话</string>
    <string name="et_user_phone_hint">请输入手机号</string>

    <string name="tv_user_address" >家庭住址</string>
    <string name="et_user_address_hint">请输入家庭住址</string>

    <string name="btn_register">注册</string>

    <!-- BottomNavigation -->
    <string name="navigation_search">一键查询</string>
    <string name="navigation_child">子女关联</string>
    <string name="navigation_push">生活推送</string>
    <string name="navigation_circle">生活圈</string>

    <!-- NavigationView -->
    <string name="menu_logout">注销</string>
    <string name="menu_login_or_register">登录/注册</string>

    <string name="menu_user_info">个人信息</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <!-- other -->
    <string name="uninitialized" translatable="false">Uninitialized</string>
    <string name="drawer_header_tv">我 的</string>


</resources>
