<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints=" "
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_account_hint"
        android:inputType="phone"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_account"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_pwd2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_request_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_request_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_pwd6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_user_phone_hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_user_phone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_pwd7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/et_user_address_hint"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_user_adress"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_user_adress"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tv_user_address"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_phone" />

    <TextView
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/action_bar_register"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_phone"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tv_user_phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_birthday" />

    <TextView
        android:id="@+id/tv_user_birthday"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tv_user_birthday"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_type" />

    <TextView
        android:id="@+id/tv_user_type"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/tv_user_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_sex" />

    <TextView
        android:id="@+id/tv_user_sex"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/tv_user_sex"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_pwd" />

    <TextView
        android:id="@+id/tv_request_pwd"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tv_request_pwd"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwd" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/btn_register"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_adress" />


</android.support.constraint.ConstraintLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".RegisterActivity">-->

<!--</android.support.constraint.ConstraintLayout>-->